--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,8 @@
 {
     "require": {
         "robmorgan/phinx": "^0.16.2"
+    },
+    "require-dev": {
+        "phpunit/phpunit": "^11.4"
     }
 }
